# lab

./: .gitignore  README.md  main.py  pyproject.toml
.matplotlib-cache/: fontlist-v390.json
examples/: example_mathlab.py  example_usage.py
mathlab/: __init__.py  checks.py  primes.py
mathplot/: __init__.py  core.py  utils.py
