[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mathplot"
version = "0.1.0"
description = "A lightweight package for plotting mathematical functions and sequences."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
]
